--- a/serverless.yml
+++ b/serverless.yml
@@ -51,7 +51,16 @@ resources:
                 AttributeDefinitions:
                     - AttributeName: Id
                       AttributeType: S
+                    - AttributeName: Name
+                      AttributeType: S
                 KeySchema:
                     - AttributeName: Id
                       KeyType: HASH
+                GlobalSecondaryIndexes:
+                    - IndexName: Name_index
+                      KeySchema:
+                        - AttributeName: Name
+                          KeyType: HASH
+                      Projection:
+                          ProjectionType: ALL
                 BillingMode: PAY_PER_REQUEST
