--- a/serverless.yml
+++ b/serverless.yml
@@ -40,7 +40,7 @@ functions:
     events:
       - http:
           method: get
-          path: /pokemonType
+          path: /pokemonType/{Type}
 
 resources:
     Resources:
